variables.Variables.scala.error
Compilation error:
Variables:8: error: '(' expected but identifier found.
while y != x {
      ^Variables:13: error: illegal start of simple expression
	}
        ^